--- a/homepage.html
+++ b/homepage.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Schedule Maker</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div>
         <h1>Course Scheduler</h1>
     </div>
     <div>
-        <div>
-            <input type="text" id="major-search-box" placeholder="enter your major">
-            <input type="text" id="grad-year-box" placeholder="expected grad year"> 
-        </div>
-        <button>enter</button>
+        <h2>Welcome to Schedule Maker</h2>
+        <p><strong>Step 1:</strong> enter your major</p>
+        <form autocomplete="off" action="/action_page.php">
+            <div class="autocomplete" style="width:300px;">
+              <input id="myInput" type="text" name="myCountry" placeholder="Country">
+            </div>
+            <input type="submit">
+          </form>
     </div>
 
 </body>
