--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,7 @@
         <p><strong>Step 1:</strong> enter your major</p>
         <form autocomplete="off" action="/action_page.php">
             <div class="autocomplete" style="width:300px;">
-              <input id="myInput" type="text" name="myCountry" placeholder="Country">
+              <input id="myInput" type="text" name="myCountry" placeholder="enter your major">
             </div>
             <input type="submit">
           </form>
