--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Schedule Maker</title>
@@ -11,12 +12,13 @@
     </div>
     <div>
         <div>
-            <input type="text" id="major-search-box" placeholder="enter your major">
-            <input type="text" id="grad-year-box" placeholder="expected grad year"> 
+            <h2>Welcome to Course Scheduler</h2>
+            <h3>Step 1: Enter your Major and Graduation Year</h3>
+            <input type="text" id="major-search-box" placeholder="Enter your major">
+            <input type="text" id="grad-year-box" placeholder="Expected grad year"> 
         </div>
         <button>enter</button>
     </div>
 
 </body>
 </html> 
-heroo
