--- a/page1.html
+++ b/page1.html
@@ -13,12 +13,17 @@
     <div>
         <h2>Welcome to Schedule Maker</h2>
         <p><strong>Step 1:</strong> enter your major</p>
-        <form autocomplete="off" action="/action_page.php">
-            <div class="autocomplete" style="width:300px;">
-              <input id="myInput" type="text" name="myCountry" placeholder="enter your major">
-            </div>
-            <input type="submit">
-          </form>
+        <div>
+            <span>convert to</span>
+            <select name="options" id="options">
+                <option value="" style="display: None;">Select your major</option>
+                <option value="EE">Electrical Engineering</option>
+                <option value="ME">Mechanical Engineering</option>
+                <option value="CSE">Computer Engineering</option>
+                <option value="CS">Computer Science</option>
+                <option value="ChE">Chemical Engineering</option>
+                <option value="CE">Civil Engineering</option>
+            </select>
     </div>
 
     <script type="module" src="main.js"></script>
