--- a/page2.html
+++ b/page2.html
@@ -10,10 +10,15 @@
     <div>
         <h1>Course Scheduler</h1>
     </div>
+
     <div>
         <h2>Welcome to Schedule Maker</h2>
-        <p><strong>Step 2:</strong> select the courses you've already taken</p>
+        <h3><strong>Step 2:</strong> Select the courses you've already taken</h3>
         <select name="" id=""></select>
+    </div>
+
+    <div>
+        <h3>Selected Courses:</h3>
     </div>
 
 </body>
