--- a/page1.html
+++ b/page1.html
@@ -14,8 +14,7 @@
         <h2>Welcome to Schedule Maker</h2>
         <p><strong>Step 1:</strong> enter your major</p>
         <div>
-            <span>convert to</span>
-            <select name="options" id="options">
+            <select name="options" id="majorOptions">
                 <option value="" style="display: None;">Select your major</option>
                 <option value="EE">Electrical Engineering</option>
                 <option value="ME">Mechanical Engineering</option>
@@ -24,6 +23,7 @@
                 <option value="ChE">Chemical Engineering</option>
                 <option value="CE">Civil Engineering</option>
             </select>
+            <button id="enter-">enter</button>
     </div>
 
     <script type="module" src="main.js"></script>
