--- a/page1.html
+++ b/page1.html
@@ -12,7 +12,7 @@
     </div>
     <div>
         <h2>Welcome to Schedule Maker</h2>
-        <h3><strong>Step 1:</h3> enter your major</h3>
+        <h3>Step 1: Enter your major</h3>
         <div>
             <select name="options" id="majorOptions">
                 <option value="" style="display: None;">Select your major</option>
