--- a/page1.html
+++ b/page1.html
@@ -23,8 +23,10 @@
                 <option value="ChE">Chemical Engineering</option>
                 <option value="CE">Civil Engineering</option>
             </select>
-            <button id="enter-">enter</button>
-    </div>
+            <a href="page2.html">
+                <button>Enter</button>
+            </a>    
+        </div>
 
     <script type="module" src="main.js"></script>
 </body>
