--- a/page1.html
+++ b/page1.html
@@ -21,9 +21,11 @@
                 <option value="CSE">Computer Engineering</option>
                 <option value="CS">Computer Science</option>
                 <option value="ChE">Chemical Engineering</option>
-                <option value="CE">Civil Engineering</option>
+                <option value="AES">Applied Engineering Sciences</option>
+                <option value="BE">Biosystems Engineering</option>
+                <option value="MSE">Materials Science Engineering</option>
             </select>
-            <button id="enter-">enter</button>
+            <button id="enterMajorButton">enter</button>
     </div>
 
     <script type="module" src="main.js"></script>
