--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
         <h2>Welcome to Schedule Maker</h2>
         <h3>Step 1: Enter your major</h3>
         <div>
-            <select name="options" id="majorOptions">
+            <select name="majorOptions" id="majorOptions">
                 <option value="" style="display: None;">Select your major</option>
                 <option value="EE">Electrical Engineering</option>
                 <option value="ME">Mechanical Engineering</option>
