--- a/page2.html
+++ b/page2.html
@@ -15,10 +15,7 @@
 
     <div>
         <h3>Step 2: Select the courses you've already taken</h3>
-        <select name="" id="">
-            <option value="" style="display: None;">Select your classes</option>
-            <option value="PLACEHOLDER">placeholder option</option>
-        </select>
+        <form action=""></form>
     </div>
 
     <div>
