--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,16 @@
 
     <div>
         <h3>Step 2: Select the courses you've already taken</h3>
-        <form action=""></form>
+        <datalist id="majors">
+            <option value="Electrical Engineering"></option>
+            <option value="Mechanical Engineering"></option>
+            <option value="Computer Engineering"></option>
+            <option value="Computer Science"></option>
+            <option value="Chemical Engineering"></option>
+            <option value="Applied Engineering Sciences"></option>
+            <option value="Biosystems Engineering"></option>
+            <option value="Materials Science Engineering"></option>
+          </datalist>
     </div>
 
     <div>
