--- a/page1.html
+++ b/page1.html
@@ -30,6 +30,6 @@
     </div>
     <button id="enterMajorButton">enter</button>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="page1.js"></script>
 </body>
 </html>
