--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
 
     <div>
         <h3>Step 2: Select the courses you've already taken</h3>
-        
+        <input id="courseSearch" type="text" placeholder="enter a course">
 
     </div>
 
