--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <h1>Course Scheduler</h1>
+        <h1>Course Compass</h1>
     </div>
     <div>
         <h2>Welcome to Schedule Maker</h2>
