--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <h1>Course Scheduler</h1>
+        <h1>Course Compass</h1>
     </div>
     <div>
         <h3>Step 3: Display of classes can take next semester</h3>
