--- a/page1.html
+++ b/page1.html
@@ -10,6 +10,7 @@
 
 <body>
     <div>
+        <img src="logo_prototype.png" alt="Description of image" width="500" height="300">
         <h1>Course Compass</h1>
     </div>
     <div>
