--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Schedule Maker</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <img src="logo_prototype.png" alt="Description of image" width="500" height="300">
     </div>
     <div>
-        <h2>Welcome to Schedule Maker</h2>
+        <h2>WELCOME TO COURSE COMPASS</h2>
         <h3>Step 1: Enter your major</h3>
         <div>
             <select name="majorOptions" id="majorOptions">
