--- a/page2.html
+++ b/page2.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Schedule Maker</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
 </head>
 
 <body>
     <div>
-        <h1>Course Compass</h1>
+        <img src="logo_prototype.png" alt="Description of image" width="500" height="300">
     </div>
 
     <div id="courseOptions">
