--- a/page1.html
+++ b/page1.html
@@ -28,7 +28,7 @@
                 <option value="MSE">Materials Science Engineering</option>
             </select>
     </div>
-    <button id="enterMajorButton">enter</button>
+    <button id = "enterMajorButton" class="button">enter</button>
 
     <script type="module" src="page1.js"></script>
 </body>
