--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,8 @@
     <div id="selectedCourses">
         <h3>Selected Courses:</h3>
     </div>
-    <button id="confirmClasses" class="enterButton">confirm</button>
+
+    <button id="confirmClasses" class = "button">confirm</button>
     <script type="module" src="page2.js"></script>
 </body>
 </html> 
