--- a/page3.html
+++ b/page3.html
@@ -16,5 +16,6 @@
     <div>
         <h3>Step 3: Display of classes can take next semester</h3>
     </div>
+    <script type="module" src="page3.js"></script>
 </body>
 </html>
