--- a/page3.html
+++ b/page3.html
@@ -16,5 +16,7 @@
     <div>
         <h3>Step 3: Display of classes can take next semester</h3>
     </div>
+
+    <button>HELLOOOO</button>
 </body>
 </html>
