--- a/page3.html
+++ b/page3.html
@@ -16,8 +16,8 @@
     <div>
         <h3>Step 3: Display of classes can take next semester</h3>
     </div>
-
-    <button>HELLOOOO</button>
+    <div id="classBank">
+    </div>
     <script type="module" src="page3.js"></script>
 </body>
 </html>
