--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,7 @@
     </div>
     <div>
         <h2>WELCOME TO COURSE COMPASS</h2>
-        <h3>Step 1: Enter your major</h3>
+        <h3>Step 1: Select your major</h3>
         <div>
             <select name="majorOptions" id="majorOptions">
                 <option value="" style="display: None;">Select your major</option>
