--- a/page3.html
+++ b/page3.html
@@ -11,12 +11,19 @@
 
 <body>
     <div>
-        <h1>Course Compass</h1>
+        <img src="logo_prototype.png" alt="Description of image" width="500" height="300">
+    </div>
+
+    <div>
+        <h3>Step 3: Select Difficulty of Schedule</h3>
+    </div>
+    <div id="difficulty">
+        <button id="easyButton" value="13">easy (12-14 credits)</button>
+        <button id="mediumButton" value="15">medium (14-16 credits)</button>
+        <button id="hardButton" value="17">hard (16-19 credits)</button>
     </div>
     <div>
-        <h3>Step 3: Display of classes can take next semester</h3>
-    </div>
-    <div id="classBank">
+        <button id="confirmButton" class = "button">confirm</button>
     </div>
     <script type="module" src="page3.js"></script>
 </body>
