--- a/page3.html
+++ b/page3.html
@@ -4,32 +4,26 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Scheduler</title>
+    <title>Course Schedule Maker</title>
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
 </head>
-
 
 <body>
     <div>
         <img src="logo_prototype.png" alt="Description of image" width="500" height="300">
     </div>
 
+    <div id="courseOptions">
+        <h3>Step 3: Select the courseload of your schedule</h3>
+    </div>
+
     <div>
-        <h3>Step 3: Select Difficulty of Schedule</h3>
+        <button>light</button>
+        <button>medium</button>
+        <button>difficult</button>
     </div>
-    <div id="difficulty">
-        <button id="easyButton" value="13">easy (12-14 credits)</button>
-        <button id="mediumButton" value="15">medium (14-16 credits)</button>
-        <button id="hardButton" value="17">hard (16-19 credits)</button>
-    </div>
-<<<<<<< Updated upstream
-    <div>
-        <button id="confirmButton" class = "button">confirm</button>
-=======
-    <div id="classBank">
-        <h3>Step 3: Display of classes can take next semester</h3>
->>>>>>> Stashed changes
-    </div>
-    <script type="module" src="page3.js"></script>
+
+    <button id="confirmClasses" class = "button">confirm</button>
+    <script type="module" src="page2.js"></script>
 </body>
-</html>
+</html> 
