--- a/page4.html
+++ b/page4.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <h1>Course Compass</h1>
+        <img src="logo.png" alt="Description of image" width="500" height="300">
     </div>
     <div>
         <h3>Step 4: Display of classes can take next semester</h3>
