--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <img src="logo_prototype.png" alt="Description of image" width="500" height="300">
+        <img src="logo.png" alt="Description of image" width="500" height="300">
     </div>
 
     <div id="courseOptions">
