--- a/page3.html
+++ b/page3.html
@@ -18,12 +18,12 @@
     </div>
 
     <div>
-        <button>light</button>
-        <button>medium</button>
-        <button>difficult</button>
+        <button class="diffButton" value="13">light</button>
+        <button class="diffButton" value="15">medium</button>
+        <button class="diffButton" value="17">difficult</button>
     </div>
 
-    <button id="confirmClasses" class = "button">confirm</button>
+    <button id="confirmButton" class = "button">confirm</button>
     <script type="module" src="page3.js"></script>
 </body>
 </html> 
