--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,8 @@
     </div>
     <div>
         <h2>WELCOME TO COURSE COMPASS</h2>
-        <h3>Step 1: Select your major</h3>
+        <p>For engineers, by engineers.</p>
+        <h3><strong>Step 1: </strong> Select your major</h3>
         <div>
             <select name="majorOptions" id="majorOptions">
                 <option value="" style="display: None;">Select your major</option>
@@ -28,7 +29,7 @@
                 <option value="MSE">Materials Science Engineering</option>
             </select>
     </div>
-    <button id = "enterMajorButton" class="button">enter</button>
+    <button id = "enterMajorButton" class="button">let's go!</button>
 
     <script type="module" src="page1.js"></script>
 </body>
