--- a/page2.html
+++ b/page2.html
@@ -14,11 +14,10 @@
     </div>
 
     <div id="courseOptions">
-        <h3>Step 2: Select the courses you've already taken</h3>
+        <h3><strong>Step 2: </strong> Select the courses you've already taken</h3>
     </div>
 
     <div id="selectedCourses">
-        <h3>Selected Courses:</h3>
     </div>
 
     <button id="confirmClasses" class = "button">confirm</button>
