--- a/page2.html
+++ b/page2.html
@@ -17,6 +17,11 @@
         <h3><strong>Step 2: </strong> Select the courses you've already taken</h3>
     </div>
 
+    <div>
+        <p id="totalCreditDisplay">total credits:</p>
+        <p id="creditsRemaining">credits remaining:</p>
+    </div>
+
     <div id="selectedCourses">
     </div>
 
