--- a/page1.html
+++ b/page1.html
@@ -29,7 +29,7 @@
                 <option value="MSE">Materials Science Engineering</option>
             </select>
     </div>
-    <button id = "enterMajorButton" class="button">let's go!</button>
+    <button id = "enterMajorButton" class="button">let's go! →</button>
 
     <script type="module" src="page1.js"></script>
 </body>
