--- a/page3.html
+++ b/page3.html
@@ -14,7 +14,7 @@
     </div>
 
     <div id="courseOptions">
-        <h3>Step 3: Select the courseload of your schedule</h3>
+        <h3><strong>Step 3: </strong>  Select the courseload of your schedule</h3>
     </div>
     <div>
         <button class="diffButton" value="13">light</button>
@@ -22,7 +22,7 @@
         <button class="diffButton" value="17">difficult</button>
     </div>
 
-    <button id="confirmButton" class = "button">confirm</button>
+    <button id="confirmButton" class = "button">confirm  →</button>
     <script type="module" src="page3.js"></script>
 </body>
 </html> 
