--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
     <div id="selectedCourses">
     </div>
 
-    <button id="confirmClasses" class = "button">confirm</button>
+    <button id="confirmClasses" class = "button">confirm →</button>
     <script type="module" src="page2.js"></script>
 </body>
 </html> 
