--- a/page4.html
+++ b/page4.html
@@ -14,7 +14,7 @@
         <img src="logo.png" alt="Description of image" width="500" height="300">
     </div>
     <div>
-        <h3>Step 4: Display of classes can take next semester</h3>
+        <h3>Classes you can take next semester</h3>
     </div>
     
     <div id="requiredCourses">
