--- a/page1.html
+++ b/page1.html
@@ -26,6 +26,7 @@
                 <option value="ChE">Chemical Engineering</option>
                 <option value="AES">Applied Engineering Sciences</option>
                 <option value="BE">Biosystems Engineering</option>
+                <option value="CE">Civil Engineering</option>
                 <option value="MSE">Materials Science Engineering</option>
             </select>
     </div>
