--- a/page5.html
+++ b/page5.html
@@ -8,26 +8,20 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
 </head>
 
-
 <body>
     <div>
         <img src="logo.png" alt="Description of image" width="500" height="300">
     </div>
     <div>
-        <h3>Classes you can take next semester</h3>
-    </div>
-    
-    <div id="requiredCourses">
+        <h2> Enter your email: </h2>
     </div>
 
-    <div id="classBank">
-    </div>
+    <div class="form__group field">
+        <input type="input" class="form__field" placeholder="email@domain.com" name="name" id='name' required />
+      </div>
 
-    <a href="page5.html" class="button" style="text-decoration: none;">
-        Email Me My Results! →
-    </a>
-    
+    <button class="button">Enter</button>
+    <script type="module" src="page5.js"></script>
 
-    <script type="module" src="page4.js"></script>
 </body>
 </html>
