--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,11 @@
     <div id="selectedCourses">
     </div>
 
-    <button id="confirmClasses" class = "button">confirm →</button>
+    <div>
+        <button class="button" onclick="window.location.href='page1.html'">← Back</button>
+        <button id="confirmClasses" class = "button">confirm →</button>
+    </div>
+
     <script type="module" src="page2.js"></script>
 </body>
 </html> 
