--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,10 @@
         <button class="diffButton" value="17">difficult</button>
     </div>
 
+    <div>
+    <button class="button" onclick="window.location.href='page2.html'">← Back</button>
     <button id="confirmButton" class = "button">confirm  →</button>
+    </div>
     <script type="module" src="page3.js"></script>
 </body>
 </html> 
