--- a/page4.html
+++ b/page4.html
@@ -14,6 +14,7 @@
         <img src="logo.png" alt="Description of image" width="500" height="300">
     </div>
     <div>
+        <h2>Results</h2>
         <h2 style="font-size: 18px;">Classes you can take next semester</h2>
     </div>
     
