--- a/page4.html
+++ b/page4.html
@@ -14,8 +14,7 @@
         <img src="logo.png" alt="Description of image" width="500" height="300">
     </div>
     <div>
-        <h2>Results</h2>
-        <h2 style="font-size: 18px;">Classes you can take next semester</h2>
+        <h3>Classes you can take next semester</h3>
     </div>
     
     <div id="requiredCourses">
@@ -23,16 +22,6 @@
 
     <div id="classBank">
     </div>
-<<<<<<< Updated upstream
-
-    <a href="page5.html" class="button" style="text-decoration: none;">
-        Email Me My Results! →
-    </a>
-    
-
-=======
-    <button class="button">send to email</button>
->>>>>>> Stashed changes
     <script type="module" src="page4.js"></script>
 </body>
 </html>
