--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
     </div>
 
     <div>
-        <button class="button" onclick="window.location.href='index.html'">← Back</button>
+        <button class="button" onclick="window.location.href='page1.html'">← Back</button>
         <button id="confirmClasses" class = "button">confirm →</button>
     </div>
 
