--- a/page4.html
+++ b/page4.html
@@ -22,6 +22,8 @@
 
     <div id="classBank">
     </div>
+    <button class="button" onclick="window.location.href='page5.html'">Email my results!</button>
+
     <script type="module" src="page4.js"></script>
 </body>
 </html>
