--- a/page3.html
+++ b/page3.html
@@ -10,8 +10,9 @@
 
 <body>
     <div>
-        <img src="logo.png" alt="Description of image" width="500" height="300">
-    </div>
+        <a href="page1.html">
+            <img src="logo.png" alt="Description of image" width="500" height="300">
+            </a>    </div>
 
     <div id="courseOptions">
         <h3><strong>Step 3: </strong>  Select the courseload of your schedule</h3>
