--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,9 @@
 
 <body>
     <div>
+        <a href="page1.html">
         <img src="logo.png" alt="Description of image" width="500" height="300">
+        </a>
     </div>
     <div>
         <h2>WELCOME TO COURSE COMPASS</h2>
