--- a/page2.html
+++ b/page2.html
@@ -10,8 +10,9 @@
 
 <body>
     <div>
-        <img src="logo.png" alt="Description of image" width="500" height="300">
-    </div>
+        <a href="page1.html">
+            <img src="logo.png" alt="Description of image" width="500" height="300">
+            </a>    </div>
 
     <div id="courseOptions">
         <h3><strong>Step 2: </strong> Select the courses you've already taken</h3>
