--- a/page4.html
+++ b/page4.html
@@ -11,8 +11,9 @@
 
 <body>
     <div>
-        <img src="logo.png" alt="Description of image" width="500" height="300">
-    </div>
+        <a href="page1.html">
+            <img src="logo.png" alt="Description of image" width="500" height="300">
+            </a>    </div>
     <div>
         <h2>Results</h2>
         <h2 style="font-size: 17px;">Classes you can take next semester</h2>
