--- a/page5.html
+++ b/page5.html
@@ -10,8 +10,9 @@
 
 <body>
     <div>
-        <img src="logo.png" alt="Description of image" width="500" height="300">
-    </div>
+        <a href="page1.html">
+            <img src="logo.png" alt="Description of image" width="500" height="300">
+            </a>    </div>
     <div>
         <h2> Enter your email: </h2>
     </div>
